--- a/ajapaik/ajapaik/static/css/photo-controls-sidebar.css
+++ b/ajapaik/ajapaik/static/css/photo-controls-sidebar.css
@@ -1,10 +1,27 @@
-.photo-controls-sidebar {
-    width: 81px;
-    height: 100vh;
-    position: fixed;
-    padding-top: 18px;
-    background-color: #1A1A1A;
-    text-align: center;
+@media (max-width: 767px) {
+  .photo-controls-sidebar {
+      width: 100%;
+      height: 70px;
+      position: fixed;
+      bottom: 0;
+      padding-top: 5px;
+      background-color: #1A1A1A;
+      text-align: center;
+      overflow: auto;
+      z-index: 99;
+    }
+}
+
+@media (min-width: 768px) {
+    .photo-controls-sidebar {
+        width: 81px;
+        height: 100vh;
+        position: fixed;
+        padding-top: 18px;
+        background-color: #1A1A1A;
+        text-align: center;
+        overflow: auto;
+    }
 }
 
 .photo-controls-sidebar__icon {
